--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "HelloWorld",
-  "displayName": "HelloWorld",
+  "name": "Passport",
+  "displayName": "Passport",
   "expo": {
-    "name": "HelloWorld",
-    "slug": "HelloWorld",
+    "name": "Passport",
+    "slug": "Passport",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/app-icon-all.png",
@@ -19,7 +19,7 @@
     "assetBundlePatterns": ["**/*"],
     "android": {
       "icon": "./assets/images/app-icon-android-legacy.png",
-      "package": "com.helloworld",
+      "package": "com.passport",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/app-icon-android-adaptive-foreground.png",
         "backgroundImage": "./assets/images/app-icon-android-adaptive-background.png"
@@ -33,7 +33,7 @@
     "ios": {
       "icon": "./assets/images/app-icon-ios.png",
       "supportsTablet": true,
-      "bundleIdentifier": "com.helloworld",
+      "bundleIdentifier": "com.passport",
       "splash": {
         "image": "./assets/images/splash-logo-ios-mobile.png",
         "tabletImage": "./assets/images/splash-logo-ios-tablet.png",
