--- a/package.json
+++ b/package.json
@@ -139,8 +139,8 @@
     "specs": "detox",
     "configurations": {
       "ios.sim.debug": {
-        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/PassportApp.app",
-        "build": "xcodebuild -workspace ios/PassportApp.xcworkspace -scheme PassportApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 14 Pro'",
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/Passport.app",
+        "build": "xcodebuild -workspace ios/Passport.xcworkspace -scheme Passport -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 14 Pro'",
         "type": "ios.simulator",
         "device": {
           "name": "iPhone 14 Pro",
@@ -148,8 +148,8 @@
         }
       },
       "ios.sim.release": {
-        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/PassportApp.app",
-        "build": "xcodebuild -workspace ios/PassportApp.xcworkspace -scheme PassportApp -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 14 Pro'",
+        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/Passport.app",
+        "build": "xcodebuild -workspace ios/Passport.xcworkspace -scheme Passport -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -destination 'name=iPhone 14 Pro'",
         "type": "ios.simulator",
         "device": {
           "name": "iPhone 14 Pro",
