--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
+    "@supabase/supabase-js": "^2.1.0",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
     "expo": "~46.0.17",
@@ -66,6 +67,7 @@
     "react-native-reanimated": "2.12",
     "react-native-safe-area-context": "4.3.4",
     "react-native-screens": "3.15.0",
+    "react-native-url-polyfill": "^1.3.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.3"
