Add CreatePost page and Feed navigation

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "date-fns": "^2.29.2",
     "expo": "~46.0.17",
     "expo-application": "~4.2.2",
-    "expo-constants": "~13.2.3",
+    "expo-constants": "^14.0.2",
     "expo-device": "~4.3.0",
     "expo-file-system": "~14.1.0",
     "expo-font": "~10.2.0",
