--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@supabase/supabase-js": "^2.1.0",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
-    "expo": "~46.0.17",
+    "expo": "^48.0.11",
     "expo-application": "~5.1.1",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
@@ -61,7 +61,7 @@
     "mobx-react-lite": "3.4.0",
     "mobx-state-tree": "5.1.5",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.6",
     "react-native-bootsplash": "4.3.2",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
@@ -103,7 +103,7 @@
     "expo-detox-hook": "1.0.10",
     "expo-modules-autolinking": "~1.1.0",
     "fbjs-scripts": "3.0.1",
-    "jest": "^26.6.3",
+    "jest": "^29.2.1",
     "jest-circus": "26",
     "jest-environment-node": "26",
     "jest-expo": "^48.0.0",
