--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native": "0.71.6",
     "react-native-bootsplash": "4.3.2",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -87,9 +88,9 @@
     "@types/react-native": "0.67.8",
     "@typescript-eslint/eslint-plugin": "5.28.0",
     "@typescript-eslint/parser": "5.28.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "^29.5.0",
     "babel-loader": "8.2.5",
-    "detox": "19.12.1",
+    "detox": "^20.7.0",
     "detox-expo-helpers": "0.6.0",
     "eslint": "8.17.0",
     "eslint-config-prettier": "8.5.0",
@@ -120,7 +121,7 @@
     "react-native-web": "~0.18.11",
     "reactotron-core-client": "^2.8.10",
     "regenerator-runtime": "^0.13.4",
-    "ts-jest": "26",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.4",
     "webpack": "4",
     "webpack-dev-server": "^3"
