--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "react-native-web": "~0.18.11",
     "reactotron-core-client": "^2.8.10",
     "regenerator-runtime": "^0.13.4",
+    "supabase": "^1.50.8",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.4",
     "webpack": "4",
